# TerranEngine

./: .gitignore  CMakeLists.txt  README.md
assets/maps/: demo.map  format.map
assets/shaders/: sprite.frag  sprite.vert  test.frag
assets/textures/: Font Tileset.aseprite  Template Tileset.aseprite
cmake/: FetchSDL3.cmake  Options.cmake
src/: CMakeLists.txt  main.cpp
src/engine/: Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  GLContext.cpp  GLContext.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/engine/core/: Application.cpp  Application.h  Config.h  Input.cpp  Input.h  Log.h  Time.cpp  Time.h  World.h
src/engine/ecs/: Behaviour.h  CameraSystem.cpp  CameraSystem.h  ComponentPool.h  Components.h  Entity.h  IComponentPool.h  Registry.h  ScriptSystem.cpp  ScriptSystem.h  System.h  World.h
src/engine/ecs/components/: Camera2D.h  Components.h  Relationship.h  Sprite.h  Transform2D.h
src/engine/ecs/world/: ComponentManager.h  EntityManager.cpp  EntityManager.h  HierarchySystem.cpp  HierarchySystem.h  QueryEngine.h  SystemScheduler.cpp  SystemScheduler.h  World.h
src/engine/gfx/: AnimationSystem.cpp  AnimationSystem.h  AtlasUtil.h  Camera2D.cpp  Camera2D.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  WindowManager.cpp  WindowManager.h
src/engine/level/: TileGrid.cpp  TileGrid.h  TileParser.cpp  TileParser.h
src/engine/math/: Grid.h
src/game/: MapParser.h  TestBehaviour.h  TestCameraBehaviour.h  main.cpp
